--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"require": {
 		"php": ">=5.5",
-		"nette/di": "~2.3",
+		"nette/di": "^2.4",
 		"nette/utils": "~2.3",
 		"simple-bus/message-bus": "~2.2"
 	},
