--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
 		"php": ">=5.5",
 		"nette/di": "^2.4",
 		"nette/utils": "~2.3",
-		"simple-bus/message-bus": "~2.2"
+		"simple-bus/message-bus": "^3.0"
 	},
 	"require-dev": {
 		"nette/tester": "~1.7",
