--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"type": "library",
 	"license": "MIT",
 	"require": {
-		"php": ">=5.5",
+		"php": "^7.0",
 		"nette/di": "^2.4",
 		"nette/utils": "~2.3",
 		"simple-bus/message-bus": "^3.0"
