--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,37 @@
+
 language: php
-php:
-    - 5.5
-    - 5.6
-    - 7.0
 
-script:
-    - vendor/bin/phpunit $COVERAGE
-    - php temp/code-checker/src/code-checker.php --short-arrays
-
-after_failure:
-    # Print *.actual content
-    - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done
-
-before_script:
-    - travis_retry composer install --no-interaction --prefer-dist
-    - travis_retry composer create-project nette/code-checker temp/code-checker ~2.5 --no-interaction
-    - if [ $TRAVIS_PHP_VERSION == "7.0" ]; then COVERAGE="--coverage-clover build/logs/clover.xml"; fi
-
-after_script:
-    # Report Code Coverage
-    - >
-      if [ "$coverage" != "" ]; then
-      wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar
-      && php coveralls.phar --verbose --config tests/.coveralls.yml
-      || true; fi
 sudo: false
 
 cache:
     directories:
         - $HOME/.composer/cache
+
+php:
+  - 7.0
+  - 7.1
+  - 7.2
+
+matrix:
+  include:
+    - php: 7.0
+    - php: 7.1
+      env:
+        - COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
+    - php: 7.1
+      env: COVERAGE="--coverage-clover build/logs/clover.xml"
+    - php: 7.2
+
+before_install:
+  - travis_retry composer self-update
+
+install:
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-dist
+
+script:
+  - vendor/bin/phpunit $COVERAGE
+
+after_script:
+  - if [ "$COVERAGE" != "" ]; then vendor/bin/coveralls --verbose || true; fi
+
+after_failure:
