--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 	"require-dev": {
 		"phpunit/phpunit": "^6.5",
 		"nette/bootstrap": "^2.4",
-		"nette/robot-loader": "^3.0"
+		"nette/robot-loader": "^3.0",
+		"phpunit/phpcov": "^4.0",
+		"satooshi/php-coveralls": "^2.0"
 	},
 	"authors": [
 		{
