--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,12 @@ cache:
         - $HOME/.composer/cache
 
 php:
-  - 7.0
   - 7.1
   - 7.2
+  - nightly
 
 matrix:
   include:
-    - php: 7.0
     - php: 7.1
       env:
         - COMPOSER_FLAGS="--prefer-lowest --prefer-stable"
@@ -35,3 +34,4 @@ after_script:
   - if [ "$COVERAGE" != "" ]; then vendor/bin/coveralls --verbose || true; fi
 
 after_failure:
+  - php: nightly
