--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
 	"require-dev": {
 		"phpunit/phpunit": "^6.5",
 		"nette/bootstrap": "^2.4",
-		"nette/robot-loader": "^3.0",
 		"phpunit/phpcov": "^4.0",
 		"satooshi/php-coveralls": "^2.0"
 	},
@@ -24,8 +23,9 @@
 		}
 	],
 	"autoload": {
-		"psr-0": {
-			"eGen\\MessageBus": "src/"
+		"psr-4": {
+			"eGen\\MessageBus\\": "src/",
+			"Fixtures\\": "tests/fixtures/"
 		}
 	},
 	"minimum-stability": "stable"
