--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,13 @@
 	"license": "MIT",
 	"require": {
 		"php": "^7.1",
-		"nette/di": "^2.4.10",
-		"nette/utils": "~2.3",
+		"nette/di": "^2.4.10 || ^3.0",
+		"nette/utils": "~2.3 || ^3.0",
 		"simple-bus/message-bus": "^3.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^6.5",
-		"nette/bootstrap": "^2.4",
+		"nette/bootstrap": "^2.4 || ^3.0",
 		"phpunit/phpcov": "^4.0",
 		"satooshi/php-coveralls": "^2.0"
 	},
